--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
 </head>
 <body>
-    <h2>LOGIN</h2>
+    <section class="vh-100" style="background-color: #3D7A9D;">
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+              <div class="card" style="border-radius: 1rem;">
+                <div class="row g-0">
+                  <div class="col-md-6 col-lg-5 d-none d-md-block">
+                    <img
+                      src="{% static 'img/restaurant_login.png' %}"
+                      alt="login form"
+                      class="img-fluid my-5 mb-4 ml-4" style="border-radius: 1rem 0 0 1rem !important; "
+                    />
+                  </div>
+                  <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                    <div class="card-body p-4 p-lg-5 text-black">
+      
+                      <form>
+      
+                        <div class="d-flex align-items-center mb-3 pb-1">
+                          <!-- <img src="{% static 'img/restaurant_login.png' %}" class="img-fluid" alt=""> -->
+                          <span class="h1 fw-bold mb-0">Siglo XXI</span>
+                        </div>
+      
+                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Inicio de sesión</h5>
+      
+                        <div class="form-outline mb-4">
+                          <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                          <label class="form-label" for="form2Example17">Correo electrónico</label>
+                        </div>
+      
+                        <div class="form-outline mb-4">
+                          <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                          <label class="form-label" for="form2Example27">Contraseña</label>
+                        </div>
+      
+                        <div class="pt-1 mb-4">
+                          <button class="btn btn-dark btn-lg btn-block" type="button">Entrar</button>
+                        </div>
+      
+                        <a class="small text-muted" href="#!">Olvidó su contraseña?</a>
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">No posee una cuenta? <a href="#!" style="color: #393f81;">Registrese aquí</a></p>
+                      </form>
+      
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
