--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -12,6 +12,7 @@
   <meta name="author" content="">
 
   <title>Siglo XXI - Dashboard</title>
+dasdasdadasdad
 
   <!-- Custom fonts for this template-->
   <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
