[ADD] user view and refactor

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -87,7 +87,7 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'intranet' %}">
+        <a class="nav-link" href="{% url 'indexUser' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span>
         </a>
@@ -120,6 +120,8 @@
     {% block contenido %}
     {% endblock %}
     <!-- /#wrapper -->
+  </div>
+
   <footer>  
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
       <a class="navbar-brand mr-1" href="index.html">Siglo XXI</a>
