--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -45,7 +45,7 @@
                         </div>
       
                         <!-- <a class="small text-muted" href="#!">Olvidó su contraseña?</a> -->
-                        <p class="mb-5 pb-lg-2" style="color: #393f81;">No posee una cuenta? <a href="{% url 'register' %}" style="color: #393f81;">Registrese aquí</a></p>
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">No posee una cuenta? <a href="{% url 'indexUser' %}" style="color: #393f81;">Registrese aquí</a></p>
                       </form>
       
                     </div>
