--- a/app/templates/app/administrador.html
+++ b/app/templates/app/administrador.html
@@ -3,7 +3,7 @@
 {% block contenido %}
 {% load static %}
 
-{% for u in Usuario %}
+
 
 <div id="user-table" class="col-lg-10 col-sm-9 mt-5 mx-1" style="text-align:center;">
     <table class="table table-striped table-sm" style="width: 100%;">
@@ -17,22 +17,18 @@
         </tr>
       </thead>
       <tbody>
+        {% for u in Usuario %}
         <tr>
-          <th scope="row">1</th>
+          <th scope="row">{{ u.id_usr }}</th>
           <td>{{ u.nom_usr }}</td>
           <td>{{ u.contrasenia }}</td>
           <td>{{ u.correo_usr }}</td>
           <td class="p-1">
-            <div class="col">
-              <div class="row ml-auto mr-auto" style="display:block;">
-                <a href=""><i class="fa fa-edit"> Editar</i></a>
-              </div>
-              <div class="row ml-auto mr-auto"style="display:block;">
-                <a href=""><i class="fa fa-minus-square"> Eliminar</i></a>
-              </div>
-            </div>
+            <button class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></button>
+            <button class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-minus-square"> Eliminar</i></button>
           </td>
-        </tr>        
+        </tr>
+        {% endfor %}
       </tbody>
     </table>
   </div>
@@ -45,6 +41,5 @@
   }
 </style>
 
-{% endfor %}
 
 {% endblock %}
