--- a/app/templates/app/indexUser.html
+++ b/app/templates/app/indexUser.html
@@ -8,49 +8,31 @@
     <div id="user-table" class="col-lg-10 col-sm-9 mt-5 mx-1" style="text-align:center;">
       <h2>Lista de usuarios</h2>
 
-      <button class="btn btn-primary d-flex mr-auto mb-2">Crear nuevo usuario</button>
+      <a class="btn btn-primary d-flex mr-auto mb-2">Crear nuevo usuario</a>
 
       <table class="table table-striped table-sm" style="width: 100%;">
         <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
             <th scope="col">Nombre</th>
-            <th scope="col">Email</th>
-            <th scope="col">Fecha creación</th>
+            <th scope="col">Contraseña</th>
+            <th scope="col">Correo Electrónico</th>
             <th scope="col">Acciones</th>
           </tr>
         </thead>
         <tbody>
+          {% for u in Usuario %}
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row">{{ u.id_usr }}</th>
+            <td>{{ u.nom_usr }}</td>
+            <td>{{ u.contrasenia }}</td>
+            <td>{{ u.correo_usr }}</td>
             <td class="p-1">
               <button class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></button>
               <button class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-minus-square"> Eliminar</i></button>
             </td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td class="p-1">
-              <button class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></button>
-              <button class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-minus-square"> Eliminar</i></button>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-            <td class="p-1">
-              <button class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></button>
-              <button class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-minus-square"> Eliminar</i></button>
-            </td>
-          </tr>
+          {% endfor %}
         </tbody>
       </table>
     </div>
