--- a/app/templates/app/indexUser.html
+++ b/app/templates/app/indexUser.html
@@ -8,7 +8,7 @@
     <div id="user-table" class="col-lg-10 col-sm-9 mt-5 mx-1" style="text-align:center;">
       <h2>Lista de usuarios</h2>
 
-      <a class="btn btn-primary d-flex mr-auto mb-2">Crear nuevo usuario</a>
+      <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'indexCreate' %}" style="color: white; text-decoration: none;">Crear nuevo usuario</a></button>
 
       <table class="table table-striped table-sm" style="width: 100%;">
         <thead class="thead-dark">
