--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -89,7 +89,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'indexUser' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Dashboard</span>
+          <span>Modulo Usuario</span>
         </a>
       </li>
       <li class="nav-item dropdown">
@@ -106,14 +106,9 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="#">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Gráficos</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-          <i class="fas fa-fw fa-table"></i>
-          <span>Tablas</span></a>
+          <span>Dashboard</span></a>
       </li>
     </ul>
     <!-- /.content-wrapper -->
