--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -150,6 +150,25 @@
   <script src="js/demo/datatables-demo.js"></script>
   <script src="js/demo/chart-area-demo.js"></script>
 
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  {% if messages %}
+      {% for m in messages %}
+        <script>
+          swal.fire({
+            "title": "Felicitaciones",
+            "text": "{{m}}",
+            "icon": "success",
+            "showConfirmButton": false,
+            "timer": 2000
+          })
+        </script>
+      {% endfor %}
+    {% endif %}
+
+    {% block js %}
+    {% endblock %}
+
 </body>
 
 </html>
