--- a/app/templates/app/indexUser.html
+++ b/app/templates/app/indexUser.html
@@ -1,5 +1,29 @@
 {% extends 'app/base.html' %}
 
+{% block js %}
+  <script>
+    function desactivarUsuario(id)
+    {
+      swal.fire({
+        "title": "¿Estás seguro?",
+        "text": "¡Estás apunto de desactivar al usuario!",
+        "icon": "question",
+        "showCancelButton": true,
+        "cancelButtonText": "No, cancelar",
+        "confirmButtonText": "Si, desactivar",
+        "reverseButtons": true,
+        "confirmButtonColor": "#dc3545",
+        "cancelButtonColor": "#0069D9"
+      })
+      .then(function(result) {
+        if(result.isConfirmed) {
+          window.location.href = "eliminar-usuario/"+id+"/"
+        }
+      })
+    }
+  </script>
+{% endblock %}
+
 {% block contenido %}
 {% load static %}
     <!-- /.content-wrapper -->
@@ -29,7 +53,7 @@
             <td>{{ u.email }}</td>
             <td class="p-1">
               <a href="{% url 'modificar_usuario' u.id %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-              <a href="{% url 'eliminar_usuario' u.id  %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-minus-square"> Eliminar</i></a>
+              <a onclick="desactivarUsuario({{ u.id }})" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
             </td>
           </tr>
           {% endfor %}
