--- a/app/templates/registration/editarUsuario.html
+++ b/app/templates/registration/editarUsuario.html
@@ -5,26 +5,63 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     $(document).ready(function() {
-      $('#id_username').prop('disabled', true);
+      let FIRST_NAME = $("#id_first_name").val();
+      let LAST_NAME = $("#id_last_name").val();
+      let EMAIL = $("#id_email").val();
+      
+      $('#id_username').prop('readonly', true);
       $('#id_first_name').prop('required', true);
       $('#id_last_name').prop('required', true);
-    });
-  </script>
 
-  <script>
-    var minLength = 3;
+      var minLength = 3;
 
-    $("#id_first_name").on("change", function(){
-      var value = $(this).val();
-      if (value.length < minLength)
-        Swal.fire({
-          position: 'top-end',
-          icon: 'warning',
-          title: 'El nombre debe tener mínimo 3 carácteres',
-          showConfirmButton: false,
-          timer: 1500
-        })
+      $("#id_first_name").on("blur", function(){
+        var value = $(this).val();
+        if (value.length < minLength) {
+          $("#id_first_name").val(FIRST_NAME);
+
+          Swal.fire({
+            position: 'center',
+            icon: 'warning',
+            title: 'El nombre debe tener mínimo 3 carácteres',
+            showConfirmButton: false,
+            timer: 1500
+          })
+        }
+      });
+
+      $("#id_last_name").on("blur", function(){
+        var value = $(this).val();
+        if (value.length < minLength) {
+          $("#id_last_name").val(LAST_NAME);
+    
+          Swal.fire({
+            position: 'center',
+            icon: 'warning',
+            title: 'El apellido debe tener mínimo 3 carácteres',
+            showConfirmButton: false,
+            timer: 1500
+          })
+        }
+      });
+
+      $("#id_email").on("blur", function(){
+        var value = $(this).val();
+        if (value.length < (minLength + 5)) {
+          $("#id_email").val(EMAIL);
+    
+          Swal.fire({
+            position: 'center',
+            icon: 'warning',
+            title: 'El email debe tener mínimo 8 carácteres',
+            showConfirmButton: false,
+            timer: 1500
+          })
+        }
+      });
     });
+
+    
   </script>
 {% endblock %}
 
@@ -42,9 +79,7 @@
         <div class="col">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexUser' %}" 
-              style="color: white;"
-              >Cancelar</a>
+              <a href="{% url 'indexUser' %}" style="color: white;">Cancelar</a>
             </button>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Editar</button>
           </div>
