[FIX] display views in center screen

--- a/app/templates/app/indexUser.html
+++ b/app/templates/app/indexUser.html
@@ -29,7 +29,7 @@
     <!-- /.content-wrapper -->
     
     {{message}}
-    <div id="user-table" class="col-lg-10 col-sm-9 mt-5 mx-1" style="text-align:center;">
+    <div id="user-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
       <h2>Lista de usuarios</h2>
 
       <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registro' %}" style="color: white; text-decoration: none;">Crear nuevo usuario</a></button>
