--- a/app/templates/registration/registro.html
+++ b/app/templates/registration/registro.html
@@ -5,7 +5,7 @@
     <!-- /.content-wrapper -->
     
     {% load crispy_forms_tags %}
-    <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1" style="text-align:center;">
+    <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
       <h2>Registro de usuario</h2>
       <hr>
       <form action="" method="post">
