--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -22,6 +22,16 @@
   <!-- Custom styles for this template-->
   <link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
 
+  <style>
+    .dropdown-container {
+      display: none;
+      background-color: #262626;
+      padding-left: 8px;
+    }
+
+  </style>
+
+
 </head>
 
 <body>
@@ -86,30 +96,117 @@
 
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'indexUser' %}">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Modulo Usuario</span>
-        </a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Modulos</span>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-          <h6 class="dropdown-header">Login Screens:</h6>
-          <div class="dropdown-divider"></div>
-          <h6 class="dropdown-header">Other Pages:</h6>
-          <a class="dropdown-item" href="404.html">404 Page</a>
-          <a class="dropdown-item" href="blank.html">Blank Page</a>
-        </div>
-      </li>
+     
       <li class="nav-item">
         <a class="nav-link" href="#">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Dashboard</span></a>
       </li>
+      
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Administración</span>
+        </a>
+        <div class="dropdown-container">
+          <a class="nav-link" href="{% url 'indexUser' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Usuarios</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexProveedores' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Proveedores</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexMenus' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Menus</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexProductos' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Productos</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexRecetas' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Recetas</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexMesas' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Mesas</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexPedidosProveedor' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Pedidos Proveedor</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexGestionCajas' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Gestion Cajas</span>
+          </a> 
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Bodega</span>
+        </a>
+        <div class="dropdown-container">
+          <a class="nav-link" href="{% url 'indexStockProductos' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Stock de Productos</span>
+          </a> 
+        </div>
+
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Finanzas</span>
+        </a>
+        <div class="dropdown-container">
+          <a class="nav-link" href="{% url 'indexGestionCajaFinanzas' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Gestion de Caja</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexGestionFacturas' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Gestion de Facturas</span>
+          </a> 
+          <a class="nav-link" href="{% url 'indexDetalleUtilidades' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Detalle de Utilidades</span>
+          </a> 
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Caja</span>
+        </a>
+        <div class="dropdown-container">
+          <a class="nav-link" href="{% url 'indexPagoEfectivo' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Pago Efectivo</span>
+          </a>  
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Cocina</span>
+        </a>
+        <div class="dropdown-container">
+          <a class="nav-link" href="{% url 'indexTablero' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Tablero</span>
+          </a>  
+        </div>
+      </li>
+      
+
     </ul>
     <!-- /.content-wrapper -->
     {% block contenido %}
@@ -165,6 +262,23 @@
         </script>
       {% endfor %}
     {% endif %}
+    <script>
+      /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+      var dropdown = document.getElementsByClassName("dropdown-btn");
+      var i;
+      
+      for (i = 0; i < dropdown.length; i++) {
+        dropdown[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var dropdownContent = this.nextElementSibling;
+        if (dropdownContent.style.display === "block") {
+        dropdownContent.style.display = "none";
+        } else {
+        dropdownContent.style.display = "block";
+        }
+        });
+      }
+    </script>
 
     {% block js %}
     {% endblock %}
