--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -18,7 +18,9 @@
 
   <!-- Page level plugin CSS-->
   <link href="{% static 'vendor/datatables/dataTables.bootstrap4.css' %}" rel="stylesheet">
+  <link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 
+  <link href="{% static 'css/bootstrap-table.min.css' %}" rel="stylesheet">
   <!-- Custom styles for this template-->
   <link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
 
@@ -228,9 +230,12 @@
       </nav>
   </footer>
 
+
+  <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
   <!-- Core plugin JavaScript-->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
@@ -238,7 +243,8 @@
   <!-- Page level plugin JavaScript-->
   <script src="vendor/chart.js/Chart.min.js"></script>
   <script src="vendor/datatables/jquery.dataTables.js"></script>
-  <script src="vendor/datatables/dataTables.bootstrap4.js"></script>
+  <script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
+  <script src="{% static 'vendor/datatables/dataTables.bootstrap4.js' %}"></script>
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin.min.js"></script>
@@ -248,6 +254,11 @@
   <script src="js/demo/chart-area-demo.js"></script>
 
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-es-CL.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/extensions/cookie/bootstrap-table-cookie.min.js"></script>
+
 
   {% if messages %}
       {% for m in messages %}
@@ -278,7 +289,27 @@
         }
         });
       }
+
+      
     </script>
+
+    <!-- <script>
+      var table = $('#table-bs').DataTable({
+        paging: false,
+        "language": {
+            "zeroRecords": "Los registros no coinciden con la busqueda.",
+            "info": "Pagina Actual _PAGE_ de _PAGES_",
+            "infoEmpty": "Datos no encontrados",
+            "infoFiltered": "(Buscados entre _MAX_ registros)",
+            "search": "Buscar:",
+        }
+      });
+
+      // #myInput is a <input type="text"> element
+      $('#buscador').on( 'keyup', function () {
+          table.search( this.value ).draw();
+      } );
+    </script> -->
 
     {% block js %}
     {% endblock %}
