--- a/app/templates/app/indexUser.html
+++ b/app/templates/app/indexUser.html
@@ -22,6 +22,8 @@
       })
     }
   </script>
+  
+
 {% endblock %}
 
 {% block contenido %}
@@ -32,12 +34,17 @@
     <div id="user-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
       <h2>Lista de usuarios</h2>
 
-      <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registro' %}" style="color: white; text-decoration: none;">Crear nuevo usuario</a></button>
-
-      <table class="table table-striped table-sm" style="width: 100%;">
+      <div id="toolbar">
+        <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registro' %}" style="color: white; text-decoration: none;">Crear nuevo usuario</a></button>
+      </div>
+      <table id="table" class="table table-striped table-bordered" style="width: 100%;"
+      data-toggle="table"
+      data-toolbar="#toolbar"
+      data-search="true">
+      
         <thead class="thead-dark">
           <tr>
-            <th scope="col">#</th>
+            <!-- <th scope="col">#</th> -->
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
             <th scope="col">Correo Electrónico</th>
@@ -47,7 +54,7 @@
         <tbody>
           {% for u in Usuarios %}
           <tr>
-            <th scope="row">{{ u.id }}</th>
+            <!-- <th scope="row">{{ u.id }}</th> -->
             <td>{{ u.first_name }}</td>
             <td>{{ u.last_name }}</td>
             <td>{{ u.email }}</td>
@@ -68,4 +75,6 @@
       font-size: 14px;
     }
   </style>
+
+
   {% endblock %}
