--- a/app/templates/app/usuarios/indexUser.html
+++ b/app/templates/app/usuarios/indexUser.html
@@ -17,7 +17,7 @@
       })
       .then(function(result) {
         if(result.isConfirmed) {
-          window.location.href = "eliminar-usuario/"+id+"/"
+          window.location.href = "eliminar/"+id+"/"
         }
       })
     }
