[ADD] menu maqueta
y avance gestion de cajas

--- a/app/templates/app/administrador/proveedores/indexProveedores.html
+++ b/app/templates/app/administrador/proveedores/indexProveedores.html
@@ -4,7 +4,7 @@
 {% block contenido %}
 {% load static %}
 
-{{message}}
+<!-- {{message}} -->
 <div id="proveedores-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
   <h2>Proveedores</h2>
 
