--- a/app/templates/app/administrador/menus/editarMenus.html
+++ b/app/templates/app/administrador/menus/editarMenus.html
@@ -72,14 +72,14 @@
     {% load crispy_forms_tags %}
     <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1 d-block mx-auto" style="text-align:center;">
       <form action="" method="post">
-        <h2>Editar proveedor</h2>
+        <h2>Editar menu</h2>
         <hr>
         {% csrf_token %}
         {{ form | crispy }}
         <div class="col">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexProveedores' %}" style="color: white;">Cancelar</a>
+              <a href="{% url 'indexMenus' %}" style="color: white;">Cancelar</a>
             </button>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Editar</button>
           </div>
