[FIX] gestion de cajas administrador maqueta

--- a/app/templates/app/administrador/gestion-cajas/indexCajas.html
+++ b/app/templates/app/administrador/gestion-cajas/indexCajas.html
@@ -37,7 +37,7 @@
         <td>{{c.monto_apertura}}</td>
         <td>{{c.id_est_caja}}</td>
         <td class="p-1">
-          <a href="{% url 'modificarGestionCajas' m.id_menu %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
+          <a href="{% url 'modificarGestionCajas' c.id_caja %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
           <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
         </td>
       </tr>
