--- a/app/templates/app/administrador/gestion-cajas/registroCajas.html
+++ b/app/templates/app/administrador/gestion-cajas/registroCajas.html
@@ -89,7 +89,7 @@
         <div class="col">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexMenus' %}" 
+              <a href="{% url 'indexCajas' %}" 
               style="color: white;"
               >Ir al inicio</a>
             </button>
