[REFACTOR] proveedor como caso de uso

--- a/app/templates/app/administrador/proveedores/editarProveedores.html
+++ b/app/templates/app/administrador/proveedores/editarProveedores.html
@@ -79,7 +79,7 @@
         <div class="col">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexProveedores' %}" style="color: white;">Cancelar</a>
+              <a href="{% url 'indexProveedores' %}" style="color: white;">Aceptar</a>
             </button>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Editar</button>
           </div>
