--- a/app/templates/app/administrador/proveedores/registroProveedores.html
+++ b/app/templates/app/administrador/proveedores/registroProveedores.html
@@ -93,7 +93,7 @@
               style="color: white;"
               >Ir al inicio</a>
             </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Registrar</button>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
           </div>
         </div>
       </form>
