--- a/app/templates/app/administrador/proveedores/indexProveedores.html
+++ b/app/templates/app/administrador/proveedores/indexProveedores.html
@@ -9,7 +9,7 @@
   <h2>Proveedores</h2>
 
   <div id="toolbar">
-    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroProveedores' %}" style="color: white; text-decoration: none;">Crear nuevo proveedor</a></button>
+    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroProveedores' %}" style="color: white; text-decoration: none;">Crear Proveedor</a></button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
