--- a/app/templates/app/administrador/menus/indexMenus.html
+++ b/app/templates/app/administrador/menus/indexMenus.html
@@ -9,7 +9,7 @@
   <h2>Menus</h2>
 
   <div id="toolbar">
-    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroMenus' %}" style="color: white; text-decoration: none;">Crear nuevo menu</a></button>
+    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroMenus' %}" style="color: white; text-decoration: none;">Crear Menu</a></button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
@@ -32,7 +32,7 @@
         <td>{{m.nombre_menu}}</td>
         <td class="p-1">
           <a href="{% url 'modificarMenus' m.id_menu %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
+          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
       {% endfor %}
