[REFACTOR] maqueta mesas caso de uso

--- a/app/templates/app/administrador/mesas/editarMesas.html
+++ b/app/templates/app/administrador/mesas/editarMesas.html
@@ -79,9 +79,9 @@
         <div class="col">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexMesas' %}" style="color: white;">Cancelar</a>
+              <a href="{% url 'indexMesas' %}" style="color: white;">Volver</a>
             </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Editar</button>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
           </div>
         </div>
       </form>
