--- a/app/templates/app/administrador/mesas/indexMesas.html
+++ b/app/templates/app/administrador/mesas/indexMesas.html
@@ -9,7 +9,7 @@
   <h2>Mesas</h2>
 
   <div id="toolbar">
-    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroMesas' %}" style="color: white; text-decoration: none;">Crear nueva Mesa</a></button>
+    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroMesas' %}" style="color: white; text-decoration: none;">Crear Mesas</a></button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
