--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -136,7 +136,7 @@
           </a> 
           <a class="nav-link" href="{% url 'indexPedidosProveedor' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
-            <span>Pedidos Proveedor</span>
+            <span>Pedidos Proveedores</span>
           </a> 
           <a class="nav-link" href="{% url 'indexGestionCajas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
