--- a/app/templates/app/administrador/insumos/indexInsumos.html
+++ b/app/templates/app/administrador/insumos/indexInsumos.html
@@ -6,11 +6,11 @@
 
 {{message}}
 <div id="productos-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-  <h2>Productos</h2>
+  <h2>Insumos</h2>
 
   <div id="toolbar">
     <button class="btn btn-primary d-flex pr-auto mb-2">
-        <a href="{% url 'registroProductos' %}" style="color: white; text-decoration: none;">Crear nuevo producto</a>
+        <a href="{% url 'registroInsumos' %}" style="color: white; text-decoration: none;">Crear Insumo</a>
     </button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
@@ -21,24 +21,22 @@
     <thead class="thead-dark">
       <tr>
         <!-- <th scope="col">#</th> -->
-        <th scope="col">Precio</th>
-        <th scope="col">Categoría</th>
-        <th scope="col">Tipo</th>
-        <th scope="col">Receta</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Tipo Insumo</th>
+        <th scope="col">Categoria Insumo</th>
         <th scope="col">Acciónes</th>
       </tr>
     </thead>
     <tbody>
-      {% for p in Productos %}
+      {% for i in Insumos %}
       <tr>
         <!-- <th scope="row">{{ u.id }}</th> -->
-        <td>{{p.precio}}</td>
-        <td>{{p.id_cat_producto}}</td>
-        <td>{{p.id_tipo_prod}}</td>
-        <td>{{p.id_receta}}</td>
+        <td>{{i.nom_insumo}}</td>
+        <td>{{i.id_tipo_ins}}</td>
+        <td>{{i.id_cat_ins}}</td>
         <td class="p-1">
-          <a href="{% url 'modificarProductos' p.id_producto %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
+          <a href="{% url 'modificarInsumos' i.id_ins %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
+          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
       {% endfor %}
