--- a/app/templates/app/administrador/insumos/registroInsumos.html
+++ b/app/templates/app/administrador/insumos/registroInsumos.html
@@ -81,7 +81,7 @@
     
     {% load crispy_forms_tags %}
     <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-      <h2>Registro de Productos</h2>
+      <h2>Registro de Insumos</h2>
       <hr>
       <form action="" method="post">
         {% csrf_token %}
@@ -89,11 +89,11 @@
         <div class="col">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexProductos' %}" 
+              <a href="{% url 'indexInsumos' %}" 
               style="color: white;"
-              >Ir al inicio</a>
+              >Volver</a>
             </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Registrar</button>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
           </div>
         </div>
       </form>
