--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -122,9 +122,9 @@
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Menus</span>
           </a> 
-          <a class="nav-link" href="{% url 'indexProductos' %}" select>
+          <a class="nav-link" href="{% url 'indexInsumos' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
-            <span>Productos</span>
+            <span>Insumos</span>
           </a> 
           <a class="nav-link" href="{% url 'indexRecetas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
