--- a/app/templates/app/administrador/recetas/editarRecetas.html
+++ b/app/templates/app/administrador/recetas/editarRecetas.html
@@ -81,7 +81,7 @@
             <button class="btn btn-primary d-flex mr-auto">
               <a href="{% url 'indexRecetas' %}" style="color: white;">Cancelar</a>
             </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Editar</button>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
           </div>
         </div>
       </form>
