--- a/app/templates/app/administrador/recetas/indexRecetas.html
+++ b/app/templates/app/administrador/recetas/indexRecetas.html
@@ -9,7 +9,7 @@
   <h2>Recetas</h2>
 
   <div id="toolbar">
-    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroRecetas' %}" style="color: white; text-decoration: none;">Crear nueva receta</a></button>
+    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroRecetas' %}" style="color: white; text-decoration: none;">Crear receta</a></button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
@@ -38,7 +38,7 @@
         <td>{{r.instrucciones}}</td>
         <td class="p-1">
           <a href="{% url 'modificarRecetas' r.id_receta %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
+          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
       {% endfor %}
