[REFACTOR] administrador cajas

--- a/app/templates/app/administrador/gestion-cajas/registroCajas.html
+++ b/app/templates/app/administrador/gestion-cajas/registroCajas.html
@@ -91,9 +91,9 @@
             <button class="btn btn-primary d-flex mr-auto">
               <a href="{% url 'indexCajas' %}" 
               style="color: white;"
-              >Ir al inicio</a>
+              >Volver</a>
             </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Registrar</button>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
           </div>
         </div>
       </form>
