--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -140,7 +140,7 @@
           </a> 
           <a class="nav-link" href="{% url 'indexGestionCajas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
-            <span>Gestion Cajas</span>
+            <span>Cajas</span>
           </a> 
         </div>
       </li>
