--- a/app/templates/app/administrador/gestion-cajas/indexCajas.html
+++ b/app/templates/app/administrador/gestion-cajas/indexCajas.html
@@ -9,7 +9,7 @@
   <h2>Cajas</h2>
 
   <div id="toolbar">
-    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroGestionCajas' %}" style="color: white; text-decoration: none;">Crear nueva caja</a></button>
+    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroGestionCajas' %}" style="color: white; text-decoration: none;">Crear Caja</a></button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
@@ -38,7 +38,7 @@
         <td>{{c.id_est_caja}}</td>
         <td class="p-1">
           <a href="{% url 'modificarGestionCajas' c.id_caja %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
+          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
       {% endfor %}
