[REFACTOR] stock insumos (ex productos)

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -153,7 +153,7 @@
         <div class="dropdown-container">
           <a class="nav-link" href="{% url 'indexStockProductos' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
-            <span>Stock de Productos</span>
+            <span>Stock de Insumos</span>
           </a> 
         </div>
 
