--- a/app/templates/app/bodega/stock-productos/indexStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/indexStockProductos.html
@@ -6,7 +6,7 @@
 
 <!-- {{message}} -->
 <div id="proveedores-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-  <h2>Stock Productos</h2>
+  <h2>Stock Insumos</h2>
 
   <!-- <div id="toolbar">
     <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroStockProductos' %}" style="color: white; text-decoration: none;">Crear nuevo proveedor</a></button>
