[REFACTOR] facturas finanzas

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -171,7 +171,7 @@
           </a> 
           <a class="nav-link" href="{% url 'indexGestionFacturas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
-            <span>Gestion de Facturas</span>
+            <span>Facturas</span>
           </a> 
           <a class="nav-link" href="{% url 'indexDetalleUtilidades' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
