--- a/app/templates/app/finanzas/facturas/editarFacturas.html
+++ b/app/templates/app/finanzas/facturas/editarFacturas.html
@@ -79,9 +79,9 @@
         <div class="col">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexGestionFacturas' %}" style="color: white;">Cancelar</a>
+              <a href="{% url 'indexGestionFacturas' %}" style="color: white;">Volver</a>
             </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Editar</button>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Modificar</button>
           </div>
         </div>
       </form>
