--- a/app/templates/app/finanzas/facturas/indexFacturas.html
+++ b/app/templates/app/finanzas/facturas/indexFacturas.html
@@ -46,7 +46,7 @@
         <td>{{f.id_est_factura}}</td>
         <td class="p-1">
           <a href="{% url 'modificarGestionFacturas' f.id_factura %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Detalle</i></a>
+          <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit">Ver Detalle</i></a>
           <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
         </td>
       </tr>
